# kiloEditor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: config.hpp  editor.hpp  editorPlatform.hpp
src/: editor.cpp  editorPlatform.cpp  main.cpp
